--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <td id = 'listOutliersText4'></td>
         </tr>
     </table>
-    <a href="https://github.com/vk117">NumDatSum.js GitHub repo</a>
+    <a href="https://github.com/vk117/numdatsum.js">NumDatSum.js GitHub repo</a>
 </body>
 
 </html>
